# src/orders-api/routes/web.php
@@ -6,20 +6,26 @@ use Illuminate\Support\Facades\Http;
 
 
 Route::get('/', function (Request $request) {
-    $response = Http::get(env('BACKEND_URL', 'http://api:9005').'/api/v1/orders', [
+    $response_order = Http::get(env('BACKEND_URL', 'http://api:9005').'/api/v1/orders', [
         'name'          => $request->input('name'),
         'description'   => $request->input('description'),
         'date'          => $request->input('date'),
     ]);
 
+    $response_products = Http::get(env('BACKEND_URL', 'http://api:9005').'/api/v1/products');
 
-    if ($response->successful()) {
-        $orders = $response->json();
+
+    if ($response_order->successful()) {
+        $orders   = $response_order->json();
+        $products = $response_products->successful() ? $response_products->json() : [];
     } else {
         abort(500, 'Error fetching orders from external service.');
     }
 
-    return view('orders.index', ['orders' => json_decode(json_encode($orders['orders']))]);
+    return view('orders.index', [
+        'orders'    => json_decode(json_encode($orders['orders'])),
+        'products'  => json_decode(json_encode($products['products'])),
+    ]);
 })->name('orders.index');
 
 
@@ -49,9 +55,22 @@ Route::get('/order/{id}/edit', function (Request $request, $id) {
     return view('orders.edit', ['order' => json_decode(json_encode($orderDetails['order']))]);
 })->name('orders.edit');
 
-Route::get('/delete', function (Request $request) {
+Route::post('/order/store', function (Request $request) {
 
-})->name('orders.delete');
+    dd($request->all());
+
+    $response = Http::post(env('BACKEND_URL', 'http://api:9005').'/api/v1/orders/', [
+        'name'          => $request->input('name'),
+        'description'   => $request->input('description'),
+        'date'          => $request->input('date'),
+    ]);
+
+    if ($response->successful()) {
+        return redirect()->route('orders.index')->with('success', 'Order created successfully.');
+    } else {
+        return redirect()->route('orders.index')->with('error', 'Error creating order.');
+    }
+})->name('orders.store');
 
 
 
