# src/orders-api/storage/api-docs/api-docs.json
@@ -199,7 +199,7 @@
                                         "type": "string",
                                         "example": "Description of the new order."
                                     },
-                                    "order_date": {
+                                    "date": {
                                         "description": "The date of the order",
                                         "type": "string",
                                         "format": "date",
@@ -807,12 +807,73 @@
                     }
                 }
             }
+        },
+        "/api/v1/products": {
+            "get": {
+                "tags": [
+                    "Products"
+                ],
+                "summary": "Retrieve a list of products",
+                "operationId": "7ca3593d05653d957ae7be1ac648ca44",
+                "responses": {
+                    "200": {
+                        "description": "Successful response",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "code": {
+                                            "type": "integer",
+                                            "example": 200
+                                        },
+                                        "products": {
+                                            "type": "array",
+                                            "items": {
+                                                "properties": {
+                                                    "id": {
+                                                        "type": "integer",
+                                                        "example": 31
+                                                    },
+                                                    "name": {
+                                                        "type": "string",
+                                                        "example": "alias"
+                                                    },
+                                                    "price": {
+                                                        "type": "string",
+                                                        "example": "55.54"
+                                                    },
+                                                    "created_at": {
+                                                        "type": "string",
+                                                        "format": "date-time",
+                                                        "example": "2024-09-11T07:50:15.000000Z"
+                                                    },
+                                                    "updated_at": {
+                                                        "type": "string",
+                                                        "format": "date-time",
+                                                        "example": "2024-09-11T07:50:15.000000Z"
+                                                    }
+                                                },
+                                                "type": "object"
+                                            }
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
         }
     },
     "tags": [
         {
             "name": "Orders",
             "description": "Orders"
+        },
+        {
+            "name": "Products",
+            "description": "Products"
         }
     ]
 }
